--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.datasource.url=jdbc:mysql://r6ze0q02l4me77k3.chr7pe7iynqr.eu-west-1.rds.a
 spring.datasource.username=fe6mmpbqt0mz8q69
 spring.datasource.password=q53a1kxa8lrdgnry
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 jwt.secret=MyEventsApp
