--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://r6ze0q02l4me77k3.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/brxyh5jpfzt88tn2?useSSL=false
-spring.datasource.username=fe6mmpbqt0mz8q69
-spring.datasource.password=q53a1kxa8lrdgnry
+spring.datasource.url=jdbc:mysql://localhost:3306/myevents?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 jwt.secret=MyEventsApp
